<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:theme="@style/Theme.Auth.UserStoryApp"
    android:background="@color/white"
    tools:context=".ui.activities.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/content_description_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_auth"
        android:contentDescription="@string/content_description_select_location"
        android:textAllCaps="false"
        android:text="@string/text_select_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/iv_item_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <RelativeLayout
        android:id="@+id/pv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_clear_location"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_baseline_clear"
            tools:layout_editor_absoluteX="16dp"
            android:layout_alignParentEnd="true"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/content_description_clear_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/btn_clear_location"
            android:text="@string/description"
            android:gravity="start"
            android:padding="16dp"
            android:textSize="12sp"
            android:background="@drawable/story_container"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:gravity="start"
        android:maxLines="3"
        android:minLines="3"
        android:background="@drawable/story_container"
        android:autofillHints=""
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/pv_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_upload"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/button_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>