<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@drawable/story_container">

    <TextView
        android:id="@+id/maps_username"
        android:layout_width="260dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#03A9F4"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:textSize="20sp"
        android:text="@string/user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/maps_location_label"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:transitionName="story_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:maxLines="1"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/gray_600"
        android:textSize="12sp"
        android:text="@string/location"
        app:layout_constraintTop_toBottomOf="@+id/maps_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/maps_item_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/content_description_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maps_location_label"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:srcCompat="@tools:sample/avatars"/>
</androidx.constraintlayout.widget.ConstraintLayout>