<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@drawable/story_container"
    android:padding="16dp">

    <TextView
        android:id="@+id/label_header"
        android:layout_width="268dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="50"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:scrollHorizontally="true"
        android:text="@string/text_select_location"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:lineHeight="20dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_header"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/text_confirm_location"
        android:textColor="@color/gray_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>